<resources>
    <string name="app_name">IotDBS</string>
    <string name="message_permission">Hãy cấp quyền truy cập để các chức năng của ứng dụng có thể hoạt động bình thường.</string>
    <string name="title_permission">Quyền truy cập</string>
    <string name="message_error_permission">Một số quyền chưa được cấp. Hãy vào cài đặt và cấp quyền để ứng dụng có thể hoạt động bình thường.</string>
    <string name="exit">Thoát</string>
    <string name="title_notify">Thông báo</string>
    <string name="system_error">Lỗi kết nối, kiểm tra lại mạng và thử lại</string>
    <string name="menu_home">Thoát</string>
    <string name="menu_menu">Thoát</string>
    <string name="menu_sun">Thoát</string>
    <string name="hind_email">Email</string>
    <string name="hind_username">Tên đăng nhập</string>
    <string name="hind_phone">- Nhập vào số điện thoại</string>
    <string name="hind_fullName">Tên người dùng</string>
    <string name="hind_wifi">Tên Wifi</string>
    <string name="hind_ip_gateway">IP Gateway</string>
    <string name="hind_name_gateway">Tên Gateway</string>
    <string name="txt_banner_login">TRUNG TÂM GIẢI PHÁP,\n
 TÍCH HỢP HỆ THỐNG (SI)</string>
    <string name="hind_pass">Mật khẩu</string>
    <string name="hind_pass_confirm">Xác nhận mật khẩu</string>
    <string name="btnLogin">Đăng nhập</string>
    <string name="btnShare">Chia sẻ</string>
    <string name="btnStart">Bắt đầu</string>
    <string name="btnAddScript">Tạo ngữ cảnh</string>
    <string name="btnRemoveSwitch">Gỡ thiết bị</string>
    <string name="btnNext">Tiếp tục</string>
    <string name="tvRegister">Tạo người dùng</string>
    <string name="tvRemember">Quên mật khẩu</string>
    <string name="tvIntro">Smart Building là hệ thống tòa nhà thông minh có nhiệm vụ tích hợp các thiết bị và tiện ích bên trong tòa nhà.</string>
    <string name="tvScriptNull">Chưa có ngữ cảnh</string>
    <string name="tvUserNull">Chưa có tài khoản nào được tạo</string>

    <string name="tvSlogan">IoT Digitalized Building Solution</string>
    <string name="tvvnpt">VNPT IoT Platform</string>
    <string name="tvGuild">Hướng dẫn</string>
    <string name="tvWelcome">Xin chào</string>
    <string name="tvEmtryPassWifi">Để trống nếu không có mật khẩu</string>
    <string name="tvConfig">Cấu hình</string>
    <string name="tvControl">Điều khiển</string>
    <string name="tvNameLable">Tên</string>
    <string name="tvTitleInfoDevice">Thông tin thiết bị</string>
    <string name="tvLableParam">Tham số</string>
    <string name="tvLableDes">Thông tin chi tiết</string>
    <string name="tvLableLoai">Loại</string>
    <string name="tvLableCode">Mã</string>
    <string name="tvLableAmpe">Dòng tải</string>
    <string name="tvLableVoltage">Điện áp</string>
    <string name="tvLableConnect">Kiểu kết nối</string>
    <string name="tvUtil">Tiện ích</string>
    <string name="tvcChangeColor">Đổi màu ánh sáng</string>
    <string name="tvGuild_dep_1">1.     Kết nối với mạng wifi của bạn</string>
    <string name="tvGuild_dep_2">2.     Nhập tên mạng wifi và mật khẩu để cấu hình mạng</string>
    <string name="tvGuild_dep_2_1">1.     Mở cài đặt điện thoại, chọn cài đặt Wifi</string>
    <string name="tvGuild_dep_2_2">2.     Kết nối đến Wifi của Gateway</string>
    <string name="tvGuild_dep_2_3">3.     Nhấn "Cấu hình" để bắt đầu cài đặt</string>
    <string name="tvGuild_dep_2_4">4.     Sau khi quá trình cài đặt hoàn tất, kết nối lại điện thoại vào Wifi của bạn</string>
    <string name="txt_info_device">Thông tin thiết bị</string>
    <string name="txt_location">Vị trí</string>
    <string name="txt_all_switch_on">Bật tất cả</string>
    <string name="txt_all_switch_off">Tắt tất cả</string>
    <string name="txt_Timer">Hẹn giờ</string>
    <string name="txt_Downtime">Đếm ngược</string>
    <string name="txtAddScipt">Thêm kịch bản</string>
    <string name="txtFloor_1">Tầng 1</string>
    <string name="txtFloor_2">Tầng 2</string>
    <string name="tvSetup">Cài đặt</string>
    <string name="tvMenu_0">Quản lý tòa nhà</string>
    <string name="tvMenu_1">Quản lý thiết bị</string>
    <string name="tvMenu_2">Cài đặt</string>
    <string name="tvMenu_3">Giới thiệu</string>
    <string name="tvMenu_4">Quản lý tài khoản</string>
    <string name="tvMenu_5">Trợ giúp</string>
    <string name="tvMenu_6">Đăng xuất</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>
    <string name="config_external_storage_folder">vebeeon</string>

    <!--    Script-->
    <string name="hind_name_script">Tên kịch bản</string>

    <string name="validate_Username">Bạn chưa nhập vào tên đăng nhập!</string>
    <string name="validate_Pass">Bạn chưa nhập vào mật khẩu đăng nhập!</string>
    <string name="error_login">Tài khoản hoặc mật khẩu không chính xác!</string>
    <string name="error_register">Bạn chưa nhập vào tên tài khoản!</string>
<!--    <string name="status_scan">Put the camera in place with QR code \n to scan and install the device</string>    -->
    <string name="status_scan">Đặt máy ảnh vào vị trí có mã QR \n để quét và đăng nhập</string>

<!--    Timer-->
    <string name="chose_sw">Chọn công tắc</string>
    <string name="setup_timer">Cài đặt thời gian</string>
    <string name="setup_date">Cài đặt ngày</string>
    <string name="setup_status">Cài trạng thái</string>

    <string name="sw_On">Bật</string>
    <string name="sw_Off">Tắt</string>
    <string name="btnSave">Lưu</string>

</resources>