<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBgLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@color/white" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_vnpt"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.28" />

    <TextView
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        style="@style/TextSp20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_7dp"
        android:layout_marginEnd="@dimen/dimen_7dp"
        android:text="@string/txt_banner_login"
        android:textColor="@color/textMain"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        android:id="@+id/tvSologan"
        style="@style/TextSp20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/tvWelcome"
        android:textColor="@color/textMain"
        android:visibility="visible"
        app:layout_constraintWidth_percent="0.9"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvIntro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />




    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_button_blue"
        android:text="@string/btnStart"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glBot"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:textStyle="normal"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintWidth_percent="0.7"
        android:visibility="visible"
        android:textColor="@color/black"
        android:id="@+id/tvIntro"
        style="@style/TextSp16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:text="@string/tvIntro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glHori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glHori" />

    <TextView
        android:visibility="visible"
        android:textColor="@color/black"
        style="@style/TextSp14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:padding="@dimen/dimen_15dp"
        android:text="@string/tvvnpt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>