<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:src="@color/colorBgMain"
        android:scaleType="fitXY"
        android:id="@+id/imgBgLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/tipEmail"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHori"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintHeight_percent="0.07"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:id="@+id/tipEmail"
        android:background="@drawable/bgr_edt_login"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toBottomOf="@+id/glHori"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <EditText
            android:textColorHint="@color/grey_20"
            android:padding="@dimen/dimen_7dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/sp_15"
            android:background="@color/white"
            android:layout_margin="@dimen/dimen_1dp"
            android:hint="@string/hind_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintHeight_percent="0.07"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/tipPass"
        android:background="@drawable/bgr_edt_login"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/glHori"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <EditText
            android:textColorHint="@color/grey_20"
            android:padding="@dimen/dimen_7dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/sp_15"
            android:background="@color/white"
            android:layout_margin="@dimen/dimen_1dp"
            android:hint="@string/hind_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/height_toolbar"
        android:background="@drawable/shape_button_blue"
        android:text="@string/btnLogin"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPass"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:layout_marginTop="@dimen/dimen_5dp"
        android:id="@+id/tvRegister"
        style="@style/TextSp15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/tvRegister"
        app:layout_constraintStart_toStartOf="@+id/glVer"
        app:layout_constraintTop_toBottomOf="@+id/button" />
    <TextView
        android:layout_marginTop="@dimen/dimen_5dp"
        android:id="@+id/tvRemember"
        style="@style/TextSp15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/tvRemember"
        app:layout_constraintEnd_toEndOf="@+id/glVer"
        app:layout_constraintTop_toBottomOf="@+id/button" />
    <View
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="@id/tvRegister"
        app:layout_constraintBottom_toBottomOf="@id/tvRegister"
        app:layout_constraintStart_toStartOf="@id/glVer"
        app:layout_constraintEnd_toEndOf="@id/glVer"
        android:layout_width="2dp"
        android:layout_height="@dimen/dimen_15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>